<resources>
    <string name="app_name">FallDetectionApp</string>
    <string name="connect_nbracelet">Connect\nbracelet</string>
    <string name="log_out">Log out</string>
    <string name="image_connect">image connect</string>
    <string name="fall_detection_app">Fall Detection App</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="add_emergency_contact_1">Add emergency contact 1</string>
    <string name="settings">Settings</string>
    <string name="add_emergency_contact_2">Add emergency contact 2</string>
    <string name="fall_detected">Fall detected!</string>
    <string name="time_xx_xx">Time: XX XX</string>
    <string name="alert_was_sent">Alert was sent</string>
    <string name="home">Home</string>
    <string name="personal_report">Personal Report</string>
    <string name="reports">Reports</string>
    <string name="stats">Stats</string>

    <string-array name="genders">
        <item>Female</item>
        <item>Male</item>
        <item>Not specified</item>
    </string-array>
    />
</resources>