<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="733dp"
        android:background="#93D0EC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/settings"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="195dp" />

        <ImageView
            android:id="@+id/connectBraceletIcon"
            android:layout_width="195dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/image_connect"
            app:srcCompat="@drawable/connect_bracelet_icon" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="190dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/connect_nbracelet"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="195dp" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/log_out"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>