<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="733dp"
        android:background="#93D0EC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/settings"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/textViewFallDetected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fall_detected"
            android:textAlignment="center"
            android:textColor="#D50000"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewTimeFall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_xx_xx"
            android:textAlignment="center"
            android:textColor="#546E7A"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewAlertSent"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/alert_was_sent"
            android:textAlignment="center"
            android:textColor="#546E7A"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="235dp" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Sign Out"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>