<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="733dp"
        android:background="#93D0EC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="102dp" />

        <TextView
            android:id="@+id/textViewFallDetectionApp"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/fall_detection_app"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sign_in"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sign_up"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>