<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="733dp"
        android:background="#93D0EC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="102dp" />

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="140dp" />

        <Button
            android:id="@+id/buttonEC1"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_emergency_contact_1"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/buttonEC2"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_emergency_contact_2"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="220dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>