<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#93D0EC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/settings"
                android:textSize="20sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonReports"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/reports"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <ImageView
            android:id="@+id/connectBraceletIcon"
            android:layout_width="195dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.215"
            android:background="#00FFFFFF"
            android:contentDescription="@string/image_connect"
            app:srcCompat="@drawable/connect_bracelet_icon" />

        <Button
            android:id="@+id/buttonAddDevice"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.12"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Add\nDevice"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="0.08"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Sign Out"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>