<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#93D0EC"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBackFromSettings"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="Back"
                android:textSize="20sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Switch
                android:id="@+id/switchAlertMode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="Alert Mode"
                android:textColor="#505050"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12" />

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/buttonEC1"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.12"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_emergency_contact_1"
            android:textSize="20sp" />
        android:text="Button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08" />

        <Button
            android:id="@+id/buttonEC2"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.12"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_emergency_contact_2"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08" />

        <Button
            android:id="@+id/buttonEC3"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.12"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Add Emergency Contact 3"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="0.07"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Sign Out"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>